--- a/public/style.styl
+++ b/public/style.styl
@@ -58,10 +58,10 @@ body
 	> ul
 		bottom: 0
 		darker()
-		list-style-type: none
-		padding: 5px 10px
+		margin: 0
+		padding: 5px 20px 5px 30px
 		position: absolute
-		right: 20px
+		right: 100%
 		
 		ul
 			padding-left: 20px
@@ -87,6 +87,9 @@ body
 
 #controls > form > *
 	margin-right: 20px
+
+.form-group label
+	margin-right: 5px
 
 #stats
 	position: absolute
