--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ html(ng-app="Webfunge" ng-controller="Layout")
 		meta(name='author', content='Bloutiouf aka Jonathan Giroux')
 		meta(name='description', content='Program your shaders in Webfunge and become 20% cooler!')
 		meta(property='og:description', content='Program your shaders in Webfunge and become 20% cooler!')
-		meta(property='og:image', content='http://webfunge.bloutiouf.com/image.png')
+		meta(property='og:image', content='http://webfunge.bloutiouf.com/webfunge.png')
 		meta(property='og:site_name', content='Webfunge')
 		meta(property='og:title', content='Webfunge')
 		meta(property='og:type', content='website')
